# azure-pim-cli

./: .typos.toml  Cargo.toml  LICENSE  README.md  deny.toml
.github/workflows/: build.yml
eng/: build.sh
examples/: cleanup-orphaned-assignments.rs  cleanup-orphans.rs
src/: activate.rs  assignments.rs  az_cli.rs  backend.rs  cache.rs  definitions.rs  elevate.rs  expiring.rs  graph.rs  interactive.rs  latest.rs  lib.rs  logging.rs  resources.rs  roles.rs
src/help/: az-pim-activate-role.txt  az-pim-activate-set.txt  az-pim-deactivate-role.txt  az-pim-deactivate-set.txt  az-pim-init.txt  az-pim-list.txt  az-pim-role-assignment-delete-orphan-entries.txt  az-pim-role-assignment-delete-set.txt  az-pim-role-assignment-delete.txt  az-pim-role-assignment-list.txt  az-pim-role-definition-list.txt  az-pim-role-resources-list.txt
src/models/: assignments.rs  definitions.rs  mod.rs  resources.rs  roles.rs  scope.rs
src/models/snapshots/: azure_pim_cli__models__assignments__tests__deserialization.snap  azure_pim_cli__models__definitions__tests__deserialization.snap  azure_pim_cli__models__resources__tests__child_resource_parse.snap  azure_pim_cli__models__roles__tests__parse_active-2.snap  azure_pim_cli__models__roles__tests__parse_active.snap
src/snapshots/: azure_pim_cli__assignments__tests__deserialization.snap  azure_pim_cli__definitions__tests__deserialization.snap  azure_pim_cli__resources__tests__child_resource_parse.snap  azure_pim_cli__roles__tests__parse_active-2.snap  azure_pim_cli__roles__tests__parse_active.snap
tests/data/: assignments.json  child-resources.json  definitions.json  role-assignments.json
