[package]
authors = ["Brian Caswell <bcaswell@gmail.com>"]
description = "Unofficial CLI to list and enable Azure Privileged Identity Management (PIM) roles"
documentation = "https://docs.rs/azure-pim-cli"
edition = "2021"
homepage = "https://github.com/demoray/azure-pim-cli"
keywords = ["azure"]
license = "MIT"
name = "azure-pim-cli"
repository = "https://github.com/demoray/azure-pim-cli"
version = "0.12.0"
default-run = "az-pim"

[dependencies]
anyhow = "1.0"
azure-identity-helpers = "0.0.12"
azure_core = "0.31"
azure_identity = "0.31"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
derive_setters = "0.1"
exponential-backoff = "2.1.0"
futures = "0.3.31"
humantime = "2.3"
ratatui = { version = "0.30", features = ["crossterm"] }
reqwest = { version = "0.13", features = ["json", "query"] }
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = "1.49"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.20", features = ["v7"] }

[dev-dependencies]
insta = { version = "1.46", features = ["json"] }

[target.'cfg(target_env = "musl")'.dependencies]
reqwest = { version = "0.13", features = ["native-tls-vendored"] }
