[package]
authors = ["Brian Caswell <bcaswell@gmail.com>"]
description = "Unofficial CLI to list and enable Azure Privileged Identity Management (PIM) roles"
documentation = "https://docs.rs/azure-pim-cli"
edition = "2021"
homepage = "https://github.com/demoray/azure-pim-cli"
keywords = ["azure"]
license = "MIT"
name = "azure-pim-cli"
repository = "https://github.com/demoray/azure-pim-cli"
version = "0.12.0"
default-run = "az-pim"

[dependencies]
anyhow = { version ="1.0", default-features = false, features = ["std"] }
azure-identity-helpers = { version = "0.0.13", default-features = false }
azure_core = { version = "0.32", default-features = false }
azure_identity = { version = "0.32", default-features = false }
base64 = { version = "0.22", default-features = false }
clap = { version = "4.5", default-features = false, features = ["derive", "std", "help", "usage", "error-context", "color", "suggestions"] }
clap_complete = { version = "4.5", default-features = false }
derive_setters = { version = "0.1", default-features = false }
exponential-backoff = { version = "2.1.0", default-features = false }
futures = { version = "0.3.31", default-features = false }
humantime = { version = "2.3", default-features = false }
ratatui = { version = "0.30", default-features = false, features = ["crossterm"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "query", "native-tls"] }
semver = { version = "1.0", default-features = false, features = ["std"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
thiserror = { version = "2.0", default-features = false }
tokio = { version = "1.49", default-features = false, features = ["fs", "macros", "rt-multi-thread", "sync", "time"] }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }
uuid = { version = "1.20", default-features = false, features = ["v7"] }

[dev-dependencies]
insta = { version = "1.46", default-features = false, features = ["json"] }

[target.'cfg(target_env = "musl")'.dependencies]
reqwest = { version = "0.13", default-features = false, features = ["json", "query", "native-tls-vendored"] }
